--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -3,12 +3,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <div th:replace="/fragments/header :: header"/>
+    <div th:replace="/fragments/header :: header"></div>
 </head>
 
 <body>
 
-<div th:replace="/fragments/header :: navbar"/>
+<div th:replace="/fragments/header :: navbar"></div>
 
 <div class="container">
     <div class="starter-template">
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div th:replace="/fragments/footer :: footer"/>
+<div th:replace="/fragments/footer :: footer"></div>
 
 </body>
 
