--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,7 @@
 <div th:replace="/fragments/header :: navbar"></div>
 
 <div class="container">
-    <h1 th:if="${errorMessage}" th:utext="${errorMessage}">Error - java.lang.NullPointerException</h1>
+    <h1 th:if="${errorMessage}" th:utext="${errorMessage}">Error</h1>
     <h1 th:if="!${errorMessage}">404 - Page doesn't exist</h1>
     <a href="home.html" th:href="@{/home}">Back to Home Page</a>
 </div>
