--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,9 +6,9 @@
 
     <div th:fragment="header">
         <title th:attr="data-custom=#{thymeleaf.app.title}">Store</title>
-        <link rel="stylesheet" media="screen" href="http://cdn.jsdelivr.net/webjars/bootstrap/4.5.0/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
-        <link rel="stylesheet" href="../../css/styles.css" th:href="@{/css/styles.css}"/>
-        <script src="http://cdn.jsdelivr.net/webjars/jquery/3.5.0/jquery.min.js" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+        <link rel="stylesheet" media="screen" href="http://cdn.jsdelivr.net/webjars/bootstrap/3.4.1/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" href="/static/css/styles.css" th:href="@{/css/styles.css}"/>
+        <script src="http://cdn.jsdelivr.net/webjars/jquery/3.5.1/jquery.min.js" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
     </div>
 
 </head>
