--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
 <head>
 
     <div th:fragment="header">
-        <title th:attr="data-custom=#{thymeleaf.app.title}">Store</title>
+        <title>Store</title>
         <link rel="stylesheet" media="screen" href="http://cdn.jsdelivr.net/webjars/bootstrap/3.4.1/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}"/>
         <link rel="stylesheet" href="/static/css/styles.css" th:href="@{/css/styles.css}"/>
         <script src="http://cdn.jsdelivr.net/webjars/jquery/3.5.1/jquery.min.js" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
@@ -38,7 +38,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-                    <li class="active"><a th:href="@{/logout}">Sign Out</a></li>
+                    <li class="active"><a th:href="@{/logout}">Log Out</a></li>
                 </ul>
 
             </div>
