--- a/src/main/resources/templates/fragments/pagination.html
+++ b/src/main/resources/templates/fragments/pagination.html
@@ -14,16 +14,14 @@
 
         <span th:unless="${pager.isIndexOutOfBounds()}">
 
-            <span th:if="${pager.hasPrevious()}">
-                <a class="pageLink" th:href="@{${baseUrl}(page = 1)}">&laquo; first</a>
-                <a class="pageLink" th:href="@{${baseUrl}(page = ${pager.getPageIndex() - 1})}">previous</a>
-            </span>
-
-            <span th:if="${pager.getTotalPages() != 1}" th:text="'Page ' + ${pager.getPageIndex()} + ' of ' + ${pager.getTotalPages()} + '.'"></span>
+            <span th:if="${pager.getTotalPages() != 1}" th:text="'Page ' + ${pager.getPageIndex()} + ' of ' + ${pager.getTotalPages()}"></span>
 
             <span th:if="${pager.hasNext()}">
-                <a class="pageLink" th:href="@{$baseUrl}(page = ${pager.getPageIndex() + 1})}">next</a>
-                <a class="pageLink" th:href="@{$baseUrl}(page = ${pager.getTotalPages()})}">last &raquo;</a>
+                <a class="pageLink" th:href="@{${baseUrl}(page = ${pager.getPageIndex() + 1})}">next</a>
+            </span>
+
+            <span th:if="${pager.hasPrevious()}">
+                <a class="pageLink" th:href="@{${baseUrl}(page = ${pager.getPageIndex() - 1})}">previous</a>
             </span>
 
         </span>
