--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,7 +38,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-                    <li class="active"><a th:href="@{/logout}">Log Out</a></li>
+                    <li class="active"><a th:href="@{/logout}">Logout</a></li>
                 </ul>
 
             </div>
