--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,11 +26,11 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="text" name="username" id="username" class="form-control input-lg" placeholder="Username" required="true" autofocus="true"/>
+                        <input type="text" name="username" id="username" class="form-control input-lg" placeholder="Username" required="required" autofocus="autofocus"/>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" required="true"/>
+                        <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" required="required"/>
                     </div>
 
                     <div class="row">
